Corrected the gap

--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ body{
         padding: 20% 15%;
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 2rem;
     }
 }
 
@@ -61,7 +61,7 @@ body{
         padding: 20% 15%;
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 2rem;
     }
 }
 
